--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    min-width: 330px;
-    min-height: 120px;
+    min-width: 340px;
+    min-height: 100px;
 }
 
 article {
@@ -30,7 +30,7 @@ article {
     font-size: 25px;
     text-align: center;
 }
-.sub {
+.sub, .reset {
     font-size: 25px;
     padding: 0 5px;
     background-color: #790050;
@@ -56,7 +56,14 @@ p {
         width: 100%;
     }
     .wrap div {
-        margin: 3px 0;
+        margin: 2px 0;
+    }
+    .num {
+        width: 170px;
+        font-size: 20px;
+    }
+    .sub, .reset {
+        font-size: 20px;
     }
     input, p {
         font-size: 22px;
